--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "protractor": "^5.4.2"
+    "protractor": "^5.4.2",
+    "protractor-jasmine2-html-reporter": "latest"
   },
   "devDependencies": {},
   "scripts": {
